--- a/thanhtoan.html
+++ b/thanhtoan.html
@@ -11,10 +11,10 @@
         <footer class="bg-dark" style="height: 80px; color:aliceblue;text-align: center; "> </footer>
     </div>
     </body> 
-    s
+    
     </html>
     <script src="function.js"></script>
     <script> hienmenu() </script>
-    <script> hienspmoi(20) </script>
     <script> hienselectgiamgia() </script>
+    <script> hienformthanhtoan() </script>
     
