--- a/dangky.html
+++ b/dangky.html
@@ -2,19 +2,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    
+    <script src="data.js"></script>
+</head>
     <body>
     <div class="container">
-        <header class="bg-primary" style="height: 200px; text-align: center; "><h1></h1> </header>
+        <header class="bg-primary" style="height: 90px; text-align: center; "><h1>Đăng kí</h1> </header>
         <nav class="bg-warning text-center" style="height: 40px;"> </nav>
         <main class="bg-light" style="min-height: 200px;"> </main>
-        <footer class="bg-dark" style="height: 80px; color:aliceblue;text-align: center; "> </footer>
+        <footer class="bg-dark" style="height: 80px; color:aliceblue;text-align: center; "><h3></h3>  </footer>
     </div>
-    </body> 
-    s
-    </html>
+    </body> </html>
     <script src="function.js"></script>
     <script> hienmenu() </script>
-    <script> hienspmoi(20) </script>
+    <script>hienformdangky() </script>
     <script> hienselectgiamgia() </script>
-    
