--- a/loai.html
+++ b/loai.html
@@ -3,18 +3,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="style.css">
     
+</head>
     <body>
     <div class="container">
-        <header class="bg-primary" style="height: 200px; text-align: center; "><h1></h1> </header>
+        <header class="bg-primary" style="height: 90px; text-align: center; "> </header>
         <nav class="bg-warning text-center" style="height: 40px;"> </nav>
         <main class="bg-light" style="min-height: 200px;"> </main>
-        <footer class="bg-dark" style="height: 80px; color:aliceblue;text-align: center; "> </footer>
+        <footer class="bg-dark" style="height: 80px; color:aliceblue;text-align: center; ">  </footer>
     </div>
-    </body> 
-    s
-    </html>
+    </body> </html>
     <script src="function.js"></script>
     <script> hienmenu() </script>
-    <script> hienspmoi(20) </script>
+    <script>
+        const params = new URLSearchParams(location.search);
+        let id = Number(params.get('id'));
+        hiensptheoloai(id)
+    </script>
     <script> hienselectgiamgia() </script>
-    
